compile sbt project to trigger cache

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,6 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+      - uses: nixbuild/nix-quick-install-action@v2
       - uses: ./
+      - run: nix-shell --run "sbt compile"
