--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,9 @@
 name: 'Scala project cache'
 author: 'gvolpe'
 description: 'one-liner sbt and coursier cache for GitHub Actions'
-icon: 'arrow-down-circle'
-color: 'red'
+branding:
+  icon: 'arrow-down-circle'
+  color: 'red'
 runs:
   using: 'node12'
   main: 'dist/restore/index.js'
